# tmux-backup

./: .actrc  .convco  .gitignore  .poutine.yml  .zizmor.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  deny.toml  install-binary.sh  renovate.json  tmux-backup.tmux
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  poutine.yml  zizmor.yml
.github/workflows/: _cargo-audit.yml  _ci-security.yml  cargo-audit.yml  check-outdated.yml  ci-compatibility-matrix.yml  ci-essentials.yml  ci-security.yml  essentials.yml  large-scope.yml  poutine.yml  release.yml  renovate.yml  schedule-renovate.yml  schedule-supply-chain.yml  supply-chain-schedule.yml  zizmor.yml
ci/: test_full.sh
src/: catalog.rs  config.rs  error.rs  lib.rs  main.rs  report.rs  save.rs  tmux.rs
src/actions/: mod.rs  restore.rs  save.rs
src/management/: archive.rs  backup.rs  catalog.rs  compaction.rs  mod.rs
src/management/archive/: mod.rs  v1.rs
src/tmux/: display.rs  layout.rs  mod.rs  pane.rs  pane_id.rs  server.rs  session.rs  session_id.rs  window.rs  window_id.rs
tmux-backup/: CHANGELOG.md  Cargo.toml  README.md
tmux-backup/src/: error.rs  lib.rs
tmux-backup/src/actions/: restore.rs  save.rs
tmux-backup/src/management/: backup.rs  catalog.rs
tmux-backup/src/management/archive/: v1.rs
tmux-backup/src/tmux/: client.rs  mod.rs
tmux-lib/: Cargo.toml  LICENSE-APACHE  README.md
tmux-lib/src/: client.rs  error.rs  layout.rs  lib.rs  pane.rs  pane_id.rs  parse.rs  server.rs  session.rs  session_id.rs  utils.rs  window.rs  window_id.rs
