[package]
name = "tmux-lib"
version = "0.0.1"
edition = "2021"
rust-version = "1.59.0"
description = "Tmux helper functions."
readme = "README.md"

license = "MIT OR Apache-2.0"
authors = ["graelo <graelo@grael.cc>"]
repository = "https://github.com/graelo/tmux-backup"
homepage = "https://github.com/graelo/tmux-backup/tmux-lib"
documentation = "https://docs.rs/tmux-lib"

keywords = ["tmux", "tmux-plugin", "tmux-resurrect", "backup"]
categories = ["command-line-utilities"]
exclude = ["/.github", "/ci", "/.travis.yml", "/appveyor.yml"]

[dependencies]
thiserror = "1"
async-std = { version = "1", features = ["unstable"] }
serde = { version = "1.0", features = ["derive"] }
nom = "7"
